스트림 실습: 실습 전 리팩토링
- filter 적용
- Files.readString 사용
- method interface로 수정